Fix overflow caused by footer & header width 100%

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    height: 99vh;
-    width: 99vw;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -11,12 +11,12 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
     padding: 6px;
 }
 .top-left-nav {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 .top-left-nav a {
     margin: 0 5px;
@@ -33,7 +33,7 @@ header {
     display: flex;
     flex-grow: 1;
     justify-content: flex-end;
-    margin-right: 10px;
+    align-items: center;
 }
 .top-right-nav a {
     margin: 0 5px;
@@ -51,7 +51,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: end;
-    height: calc(100vh - 555px);
+    height: calc(100% - 560px);
     max-height: 290px;
     min-height: 92px;
 }
@@ -80,7 +80,6 @@ header {
 footer {
     background-color: #f2f2f2;
     display: flex;
-    width: 100%;
     padding: 6px;
     justify-content: space-between;
     flex-shrink: 0;
@@ -92,7 +91,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     height:  47px;
-    /* padding: 0 20px; */
+    padding: 0 20px;
 }
 .bottom-nav a {
     margin: 0 5px;
